# avito

./: db.sqlite3  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_ad_price.py  0003_cat.py  0004_ad_address_ad_is_published.py  0005_alter_ad_description.py  0006_ad_category.py  0007_alter_ad_options_alter_cat_options_alter_ad_author.py  0008_ad_image.py  0009_alter_ad_options_remove_ad_address.py  0010_alter_ad_description.py  0011_alter_ad_author.py  0012_remove_ad_author_ad_user.py  0013_alter_ad_user.py  0014_selection.py
avito/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_options.py  0003_remove_user_location_user_locations.py  0004_rename_firsrt_name_user_first_name.py  0005_alter_location_lat_alter_location_lng.py  0006_alter_user_managers_user_date_joined_user_email_and_more.py
